# sql-extractor-python

./: README.md  pyproject.toml
app/: extractor.py  main.py
tests/: test_api.py  test_disambiguation.py  test_extractor.py
